[workspace]
members = [
    "demo",
    "keycodemap",
    "rdw4",
    "rdw4-rdp",
    "rdw4-spice",
    "rdw4-vnc",
    "xtask",
]
exclude = [
    "cbindgen",
]

default-members = ["demo"]

[patch.crates-io]
#freerdp2 = { git = "https://github.com/elmarco/freerdp-rs.git" }
freerdp2 = { path = "/home/elmarco/src/freerdp-rs/freerdp2" }
