[workspace]
members = [
    "demo",
    "keycodemap",
    "rdw4",
    "rdw4-rdp",
    "rdw4-spice",
    "rdw4-vnc",
    "xtask",
]
exclude = [
    "cbindgen",
]

default-members = ["demo"]

[patch.crates-io]
gvnc = { git = 'https://gitlab.gnome.org/malureau/gtk-vnc-rs.git' }
spice-client-glib = { git = 'https://gitlab.gnome.org/malureau/spice-gtk-rs.git' }
