[workspace]
members = [
    "demo",
    "keycodemap",
    "rdw4",
    "rdw4-rdp",
    "rdw4-spice",
    "rdw4-vnc",
    "xtask",
]
exclude = [
    "cbindgen",
]

default-members = ["demo"]

[patch.crates-io]
gvnc = { git = 'https://gitlab.gnome.org/malureau/gtk-vnc-rs.git' }
spice-client-glib = { git = 'https://gitlab.gnome.org/malureau/spice-gtk-rs.git' }
gtk4 = { git = 'https://github.com/elmarco/gtk4-rs.git', branch = "win32" }
gdk4-wayland = { git = 'https://github.com/elmarco/gtk4-rs.git', branch = "win32" }
gdk4-x11 = { git = 'https://github.com/elmarco/gtk4-rs.git', branch = "win32" }
gdk4-win32 = { git = 'https://github.com/elmarco/gtk4-rs.git', branch = "win32" }
