[package]
name = "demo"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = { version = "0.7", default-features = false }
rdw = { package = "rdw4", path = "../rdw4", features = ["bindings"] }
rdw-rdp = { package = "rdw4-rdp", path = "../rdw4-rdp" }
rdw-spice = { package = "rdw4-spice", path = "../rdw4-spice" }
rdw-vnc = { package = "rdw4-vnc", path = "../rdw4-vnc" }
