[package]
name = "demo"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[features]
bindings = ["rdw/bindings", "rdw-rdp/bindings", "rdw-spice/bindings", "rdw-vnc/bindings"]

[dependencies]
log = "0.4"
env_logger = { version = "0.9", default-features = false }
rdw = { package = "rdw4", path = "../rdw4", default-features = false }
rdw-rdp = { package = "rdw4-rdp", path = "../rdw4-rdp", default-features = false }
rdw-spice = { package = "rdw4-spice", path = "../rdw4-spice", default-features = false }
rdw-vnc = { package = "rdw4-vnc", path = "../rdw4-vnc", default-features = false }
