[package]
name = "rdw-spice"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
spice-client-glib = { git = "https://gitlab.gnome.org/malureau/spice-gtk-rs.git" }
rdw = { path = "../rdw" }
keycodemap = { path = "../keycodemap" }
futures = "0.3.13"
