[package]
name = "rdw-vnc"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
gvnc = { git = "https://gitlab.gnome.org/malureau/gtk-vnc-rs.git" }
rdw = { path = "../rdw" }
keycodemap = { path = "../keycodemap" }

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
