[package]
name = "rdw"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
capi = ["libc"]

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
libc = { version = "0.2", optional = true }

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"

[package.metadata.capi.header]
generation = false
