[package]
name = "rdw"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
capi = ["libc"]

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
libc = { version = "0.2", optional = true }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
gdk-wl = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs" }
libloading = "0.7.0"
khronos-egl = { version = "4.1.0", features = ["dynamic"] }
gl = "0.14.0"
wayland-protocols = { version = "0.28.5", features = ["unstable_protocols", "client"] }
wayland-client = "0.28.5"

[package.metadata.capi.header]
generation = false
