[package]
name = "rdw"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
capi = []

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
libc = "0.2.92"
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
gdk-wl = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs", features = ["v4_4"] }
gdk-x11 = { package = "gdk4-x11", git = "https://github.com/gtk-rs/gtk4-rs", features = ["v4_4"] }
libloading = "0.7.0"
khronos-egl = { version = "4.1.0", features = ["dynamic"] }
gl = "0.14.0"
wayland-protocols = { version = "0.28.5", features = ["unstable_protocols", "client"] }
wayland-client = "0.28.5"
x11 = "2.18.2"
gst = { package = "gstreamer", version = "0.16.7" }
gst-app = { package = "gstreamer-app", version = "0.16.5" }
gst-audio = { package = "gstreamer-audio", version = "0.16.5" }
usbredirhost = "0.0.1"

[package.metadata.capi.header]
generation = false
