[package]
name = "rdw4-rdp"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[features]
default = []
capi = []

[build-dependencies]
cargo_metadata = "0.13.1"
cbindgen = { path = "../cbindgen", features = ["gobject"] }

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
rdw = { package = "rdw4", path = "../rdw4", features = ["bindings"] }
freerdp = { package = "freerdp2", version = "0.1" }
keycodemap = { package = "rdw-keycodemap", path = "../keycodemap", version = "0.1" }

[package.metadata.capi.library]
name = "rdw4-rdp"

[package.metadata.capi.header]
name = "rdw-rdp"
subdirectory = "rdw4"
generation = false

[package.metadata.capi.pkg_config]
filename = "rdw4-rdp"
requires = "rdw4"
