[package]
name = "rdw4-rdp"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2021"

[features]
default = ["bindings"]
bindings = ["rdw/bindings"]
capi = []

[build-dependencies]
cargo_metadata = "0.14"
cbindgen = { path = "../cbindgen", features = ["gobject"] }

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
rdw = { package = "rdw4", path = "../rdw4" }
freerdp = { package = "freerdp2", version = "0.2" }
keycodemap = { package = "rdw-keycodemap", path = "../keycodemap", version = "0.1" }
nix = "0.23.0"
futures = { version = "0.3.17", features = ["executor"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.41.0", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
]}

[package.metadata.capi.library]
name = "rdw4-rdp"

[package.metadata.capi.header]
name = "rdw-rdp"
subdirectory = "rdw4"
generation = false

[package.metadata.capi.pkg_config]
filename = "rdw4-rdp"
requires = ["rdw4", "freerdp2"]
