[package]
name = "rdw4-spice"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
gtk = { package = "gtk4", version = "0.3" }
spice-client-glib = "0.1.0"
rdw = { package = "rdw4", path = "../rdw4", features = ["bindings"] }
keycodemap = { package = "rdw-keycodemap", path = "../keycodemap", version = "0.1" }
futures = "0.3.13"
