[package]
name = "rdw4-vnc"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
gvnc = "0.1.0"
rdw = { package = "rdw4", path = "../rdw4", features = ["bindings"] }
keycodemap = { package = "rdw-keycodemap", path = "../keycodemap", version = "0.1" }
