[package]
name = "rdw4-vnc"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[features]
default = ["bindings"]
bindings = ["rdw/bindings"]
capi = []

[build-dependencies]
cargo_metadata = "0.14"
cbindgen = { path = "../cbindgen", features = ["gobject"] }

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
gvnc = "0.3.0"
rdw = { package = "rdw4", path = "../rdw4" }
keycodemap = { package = "rdw-keycodemap", path = "../keycodemap", version = "0.1" }

[package.metadata.capi.library]
name = "rdw4-vnc"

[package.metadata.capi.header]
name = "rdw-vnc"
subdirectory = "rdw4"
generation = false

[package.metadata.capi.pkg_config]
filename = "rdw4-vnc"
requires = "rdw4"
