[package]
name = "rdw4"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

[features]
default = []
bindings = []
capi = []

[build-dependencies]
cargo_metadata = "0.14"
cbindgen = { path = "../cbindgen", features = ["gobject"] }

[dependencies]
log = "0.4"
once_cell = "1.5"
derivative = "2.2.0"
libc = "0.2.92"
gtk = { package = "gtk4", version = "0.5" }
libloading = "0.7.0"
khronos-egl = { version = "4.1.0", features = ["dynamic"] }
gl = "0.14.0"
gst = { package = "gstreamer", version = "0.19" }
gst-app = { package = "gstreamer-app", version = "0.19" }
gst-audio = { package = "gstreamer-audio", version = "0.19" }
usbredirhost = "0.0.1"
futures = "0.3.13"
bitflags = "1.3.2"
epoxy = "0.1"
keycodemap = { package = "rdw-keycodemap", path = "../keycodemap", version = "0.1" }

[target.'cfg(unix)'.dependencies]
gdk-wl = { package = "gdk4-wayland", version = "0.5", features = ["v4_4", "egl", "wayland_crate"] }
gdk-x11 = { package = "gdk4-x11", version = "0.5", features = ["v4_4", "egl"] }
wayland-protocols = { version = "0.30.0-beta.10", features = ["unstable", "client"] }
x11 = "2.18.2"

[target.'cfg(windows)'.dependencies]
gdk-win32 = { package = "gdk4-win32", features = ["win32"], version = "0.5.3" }
windows = { version = "0.43.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]}

[package.metadata.capi.header]
name = "rdw"
subdirectory = "rdw4"
generation = false

[package.metadata.capi.pkg_config]
filename = "rdw4"
requires = "gtk4"
